--- a/1-homepage.html
+++ b/1-homepage.html
@@ -82,7 +82,32 @@
                     </div>
                 </section> 
             </section>
-        </main>
+
+            <section class="carousel mt-n5 pt-4" style="background-color: #C271FF">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="img-fluid float-left rounded-circle circle-img2 my-2 mx-4" src="./assets/images/profile_5.jpg" alt="First slide">
+                            <p class="text-white pt-4">« Those tutorial aree concise and go straight to the point. I can't think of a better <br>place to learn smiling. And it's so fun! »</p>
+                            <h5 class="text-white ">Person Name</h5>
+                            <em class="text-white">weather presenter</em>
+                            <div class="carousel-caption d-none-d-md-block"></div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid float-left rounded-circle circle-img2 my-2 mx-4" src="./assets/images/profile_5.jpg" alt="First slide">
+                            <p class="text-white pt-4">« Those tutorial aree concise and go straight to the point. I can't think of a better <br>place to learn smiling. And it's so fun! »</p>
+                            <h5 class="text-white ">Person Name</h5>
+                            <em class="text-white">weather presenter</em>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    </a>
+                </div>
+            </section>
+      </main>
         <footer>
         </footer>
     </body>
