[fix] comments and name Signed-off-by: Juan Diego Alejandro Valencia Peña <juandiegoalejandro@hotmail.com>

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -19,6 +19,7 @@
         <title>SmileSchool</title>
     </head>
     <body>
+          <!-- Header Hero Piece section -->
         <header class="header container-fluid text-center text-white hero_piece"> 
             <div>
                 <input id="menu-check" type="checkbox" style="visibility: hidden">
@@ -82,7 +83,7 @@
                     </div>
                 </section> 
             </section>
-
+            <!-- Carousel of quotes section -->
             <section class="carousel mt-n5 pt-4" style="background-color: #C271FF">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
