[fix] section comment Signed-off-by: Juan Diego Alejandro Valencia Peña <juandiegoalejandro@hotmail.com>

--- a/0-homepage.html
+++ b/0-homepage.html
@@ -19,6 +19,7 @@
         <title>SmileSchool</title>
     </head>
     <body>
+         <!-- Header Hero Piece section -->
         <header class="header container-fluid text-center text-white hero_piece"> 
             <div>
                 <input id="menu-check" type="checkbox" style="visibility: hidden">
