[fix] stars size Signed-off-by: Juan Diego Alejandro Valencia Peña <juandiegoalejandro@hotmail.com>

--- a/2-homepage.html
+++ b/2-homepage.html
@@ -154,12 +154,12 @@
                                         <h5 class="m-3" style="color: #C271FF">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
 
                                     </div>
                                 </div>
@@ -179,12 +179,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -206,12 +206,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -233,12 +233,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -262,12 +262,12 @@
                                         <h5 class="m-3" style="color: #C271FF">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
 
                                     </div>
                                 </div>
@@ -287,12 +287,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -314,12 +314,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="m-2" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -341,12 +341,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
