--- a/3-homepage.html
+++ b/3-homepage.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <!-- Header Hero Piece section -->
+        <!-- Header Hero Piece section -->
     <header class="header container-fluid text-center text-white hero_piece">
         <div>
             <input id="menu-check" type="checkbox" style="visibility: hidden">
@@ -51,8 +51,6 @@
         </div>
     </header>
     <main>
-
-        <!-- Carousel of quotes section -->
         <section class="main-section col-12 pt-5">
             <h1>Get schooled</h1>
             <div class="col-sm-4">
@@ -98,6 +96,7 @@
             </section>
         </section>
 
+          <!-- Carousel of quotes section -->
         <section class="carousel mt-n5 pt-4" style="background-color: #C271FF">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -126,12 +125,13 @@
             </div>
         </section>
 
+          <!--Popular videos section -->
 
-    <!-- Popular videos section -->
-    
         <section class="container-fluid bg-white p-2">
             <h1 class="text-center my-5 py-4">Most <span style="color: #C271FF">popular</span> tutorials</h1>
+
         </section>
+
         <section class="Most-popular-tutorials mt-n5 pt-4">
             <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -154,12 +154,12 @@
                                         <h5 class="m-3" style="color: #C271FF">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
 
                                     </div>
                                 </div>
@@ -179,12 +179,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -206,12 +206,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -233,12 +233,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -262,12 +262,12 @@
                                         <h5 class="m-3" style="color: #C271FF">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
 
                                     </div>
                                 </div>
@@ -287,12 +287,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -314,12 +314,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="m-2" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -341,12 +341,12 @@
                                         <h5 class="m-3" style="color: #C271FF;">Phillip Massey</h5>
                                     </div>
                                     <div class="d-flex justify-content-space-between mr-auto">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_on.png" class="mt-2" alt="Star Rating">
-                                        <img src="./assets/images/star_off.png" class="mt-2" alt="Star Rating">
-                                        <h5 class="m-3" style="color: #C271FF">8 min</h5>
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_on.png" class="star" alt="Star Rating">
+                                        <img src="./assets/images/star_off.png" class="star" alt="Star Rating">
+                                        <h5 class="time" style="color: #C271FF">8 min</h5>
                                     </div>
                                 </div>
                             </div>
@@ -360,37 +360,38 @@
                     src="./assets/images/arrow_black_right.png" alt=""></a>
         </section>
 
-        	<!-- Row of Smiles section -->
-		<section class="container-fluid text-center  p-3" style="background-color: #071629;">
+        <!-- Row of Smiles section -->
+		<section class="container-fluid text-center p-3" style="background-color: #071629;">
 			<h2 class="text-center text-white my-5 py-4"><span class="purple-text">Free</span> membership</h2>
 			<div class="row my-5">
 				<div class="col-md">
-					<img src="./images/smile_on.png" class="smile-logo m-3" alt="Smiley">
+					<img src="./assets/images/smile_on.png" class="smile-logo-2 m-3" alt="Smiley">
 
 					<h5 class="text-white">Lorem Ipsum</h5>
 					<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 
 				<div class="col-md">
-					<img src="./images/smile_on.png" class="smile-logo m-3" alt="Smiley">
+					<img src="./assets/images/smile_on.png" class="smile-logo-2 m-3" alt="Smiley">
 					<h5 class="text-white">Lorem Ipsum</h5>
 					<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 
 				<div class="col-md">
-					<img src="./images/smile_on.png" class="smile-logo m-3" alt="Smiley">
+					<img src="./assets/images/smile_on.png" class="smile-logo-2 m-3" alt="Smiley">
 					<h5 class="text-white">Lorem Ipsum</h5>
 					<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 				<div class="col-md">
-					<img src="./images/smile_on.png" class="smile-logo m-3" alt="Smiley">
+					<img src="./assets/images/smile_on.png" class="smile-logo-2 m-3" alt="Smiley">
 
 					<h5 class="text-white">Lorem Ipsum</h5>
 					<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				</div>
 			</div>
-			<button class="btn btn-danger">REGISTER FOR FREEE</button>
-		</section>
+            <a href="#" class="btn-smile text-center my-5 py-4">REGISTER FOR FREE</a>
+        </section>
+      
     </main>
     <footer>
     </footer>
