[fix]Smile Project Signed-off-by: Juan Diego Alejandro Valencia Peña <juandiegoalejandro@hotmail.com>

--- a/0-pricing.html
+++ b/0-pricing.html
@@ -17,30 +17,40 @@
 
 <body class="pricing-hero p-0 m-n3">
 	<!-- Header -->
-	<header class="header container-fluid text-center">
-
-		<nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
-			<div class="col-sm-4">
-				<a class="navbar-brand my-3 ml-4">
-					<img class="smile-school-logo m-2" src="./images/smile_off.png" alt="Smile logo">
-					<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo">
-				</a>
+	      <!-- Header Hero Piece section -->
+		  <header class="header container-fluid text-center text-white hero_piece"> 
+            <div>
+                <input id="menu-check" type="checkbox" style="visibility: hidden">
+                <label id="menu-label" for="menu-check">
+                    <span id="menu-line"></span>
+                </label>
+                <nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
+                    <div class="col-sm-4">
+                        <a class="navbar-brand my-3 ml-4">
+                            <img class="smile_off" src="assets/images/smile_off.png" alt="smile_off">
+                            <img class="smile-logo" src="assets/images/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="col-sm-4"></div>
+                    <ul>
+                        <li><a href="#"><strong>COURSES</strong></a></li>
+                        <li><a href="#"><strong>PRICING</strong></a></li>
+                        <li><a href="#"><strong>LOGIN</strong></a></li>
+                    </ul>
+                </nav>
 			</div>
-		<ul class="nav row unstyled justify-content-space-between mt-3">
-				<li class="col-sm-3 mx-2 nav-item"><a href="./homepage.html" class="nav-link text-white pb-5">COURSES</a></li>
-				<li class="col-sm-3 mx-2 av-item"><a href="./pricing.html" class="nav-link text-white text-center">PRICING</a></li>
-				<li class="col-sm-3 mx-2 nav-item"><a href="#" class="nav-link text-white text-center">LOGIN</a></li>
-			</ul>
-		</nav>
+			
+			<section class="col-12 pt-5">
+				<h1 class="text-white">What is <a class="navbar-brand my-3
+					">
+						<img class="smile-school-logo m-2" src="./assets/images/smile_off.png" alt="Smile logo">
+						<img class="smile-school-logo" src="./assets/images/logo.png" alt="Smile School logo"></a>?</h1>
+				<h1 class="hero-title text-center mt-5">Go pro!</h1>
+			</section>
+        </header>
 
 		<!-- Hero Section -->
-		<section class="col-12 pt-5">
-			<h1 class="text-white">What is <a class="navbar-brand my-3
-				">
-					<img class="smile-school-logo m-2" src="./images/smile_off.png" alt="Smile logo">
-					<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo"></a>?</h1>
-			<h1 class="hero-title text-center mt-5">Go pro!</h1>
-	</header>
+		
 
 </body>
 
