--- a/1-pricing.html
+++ b/1-pricing.html
@@ -10,37 +10,44 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="shortcut icon" href="./images/favicon.ico?" type="image/x-icon">
+	<link rel="shortcut icon" href="./assets/images/favicon.ico?" type="image/x-icon">
 	<link rel="stylesheet" href="styles.css">
 	<title>Home - Smiling School</title>
 </head>
 
 <body class="pricing-hero p-0 m-n3">
 	<!-- Header -->
-	<header class="header container-fluid text-center">
-
-		<nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
-			<div class="col-sm-4">
-				<a class="navbar-brand my-3 ml-4">
-					<img class="smile-school-logo m-2" src="./images/smile_off.png" alt="Smile logo">
-					<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo">
-				</a>
+	      <!-- Header Hero Piece section -->
+		  <header class="header container-fluid text-center text-white hero_piece"> 
+            <div>
+                <input id="menu-check" type="checkbox" style="visibility: hidden">
+                <label id="menu-label" for="menu-check">
+                    <span id="menu-line"></span>
+                </label>
+                <nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
+                    <div class="col-sm-4">
+                        <a class="navbar-brand my-3 ml-4">
+                            <img class="smile_off" src="assets/images/smile_off.png" alt="smile_off">
+                            <img class="smile-logo" src="assets/images/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="col-sm-4"></div>
+                    <ul>
+                        <li><a href="#"><strong>COURSES</strong></a></li>
+                        <li><a href="#"><strong>PRICING</strong></a></li>
+                        <li><a href="#"><strong>LOGIN</strong></a></li>
+                    </ul>
+                </nav>
 			</div>
-			<ul class="nav row unstyled justify-content-space-between mt-3">
-				<li class="col-sm-3 mx-2 nav-item"><a href="./homepage.html" class="nav-link text-white pb-5">COURSES</a></li>
-				<li class="col-sm-3 mx-2 av-item"><a href="./pricing.html" class="nav-link text-white text-center">PRICING</a></li>
-				<li class="col-sm-3 mx-2 nav-item"><a href="#" class="nav-link text-white text-center">LOGIN</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<!-- Hero Section -->
-	<div class="container d-flex justify-content-center flex-wrap">
-		<h1 class="text-white text-center d-inline">What is<span class="navbar-brand my-5 mx-3">
-				<img class="smile-school-logo" src="./images/smile_off.png" alt="Smile logo">
-				<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo"></span>?</h1>
-		<h3 class="hero-title display-3 text-white my-4 w-100 text-center font-weight-bold">Go pro!</h3>
-	</div>
+			
+			<section class="col-12 pt-5">
+				<h1 class="text-white">What is <a class="navbar-brand my-3
+					">
+						<img class="smile-school-logo m-2" src="./assets/images/smile_off.png" alt="Smile logo">
+						<img class="smile-school-logo" src="./assets/images/logo.png" alt="Smile School logo"></a>?</h1>
+				<h1 class="hero-title text-center mt-5">Go pro!</h1>
+			</section>
+        </header>
 
 	<!-- Buttons -->
 	<div class="container text-white">
@@ -71,11 +78,11 @@
 				<p>Unlimited access to all tutorials</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 
@@ -85,11 +92,11 @@
 				<p>Access SmileSchool private forum</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 
@@ -99,11 +106,11 @@
 				<p>Access Smiles contests & Smiles Analysis</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height: 1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height: 1.8rem;">
 			</div>
 		</div>
 
@@ -113,15 +120,15 @@
 				<p>Get a free toothbrush</p>
 			</div>
 			<div class="col-4 text-center offset-4">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 		<div class="row text-white mt-4">
 			<div class="col-4 ">
-				<img src="./images/signal.png" alt="">
+				<img src="./assets/images/signal.png" alt="">
 			</div>
 			<div class="col-4 text-center offset-4">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 			<p>Exclusive discount on all Signal products</p>
 		</div>
