--- a/3-pricing.html
+++ b/3-pricing.html
@@ -10,38 +10,47 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="shortcut icon" href="./images/favicon.ico?" type="image/x-icon">
+	<link rel="shortcut icon" href="./assets/images/favicon.ico?" type="image/x-icon">
 	<link rel="stylesheet" href="styles.css">
 	<title>Home - Smiling School</title>
 </head>
 
 <body class="pricing-hero p-0 m-n3">
-	<!-- Header -->
-	<header class="header container-fluid text-center">
-
-		<nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
-			<div class="col-sm-4">
-				<a class="navbar-brand my-3 ml-4">
-					<img class="smile-school-logo m-2" src="./images/smile_off.png" alt="Smile logo">
-					<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo">
-				</a>
+	<main>
+	      <!-- Header Hero Piece section -->
+		  <header class="header container-fluid text-center text-white hero_piece"> 
+            <div>
+                <input id="menu-check" type="checkbox" style="visibility: hidden">
+                <label id="menu-label" for="menu-check">
+                    <span id="menu-line"></span>
+                </label>
+                <nav class="navbar navbar-default row justify-content-space-between mt-3 mb-5">
+                    <div class="col-sm-4">
+                        <a class="navbar-brand my-3 ml-4">
+                            <img class="smile_off" src="assets/images/smile_off.png" alt="smile_off">
+                            <img class="smile-logo" src="assets/images/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="col-sm-4"></div>
+                    <ul>
+                        <li><a href="#"><strong>COURSES</strong></a></li>
+                        <li><a href="#"><strong>PRICING</strong></a></li>
+                        <li><a href="#"><strong>LOGIN</strong></a></li>
+                    </ul>
+                </nav>
 			</div>
-			<ul class="nav row unstyled justify-content-space-between mt-3">
-				<li class="col-sm-3 mx-2 nav-item"><a href="#" class="nav-link text-white pb-5">COURSES</a></li>
-				<li class="col-sm-3 mx-2 av-item"><a href="#" class="nav-link text-white text-center">PRICING</a></li>
-			</ul>
-		</nav>
-	</header>
+			
+			<section class="col-12 pt-5">
+				<h1 class="text-white">What is <a class="navbar-brand my-3
+					">
+						<img class="smile-school-logo m-2" src="./assets/images/smile_off.png" alt="Smile logo">
+						<img class="smile-school-logo" src="./assets/images/logo.png" alt="Smile School logo"></a>?</h1>
+				<h1 class="hero-title text-center mt-5">Go pro!</h1>
+			</section>
+        </header>
 
-	<!-- Hero Section -->
-	<div class="container d-flex justify-content-center flex-wrap">
-		<h1 class="text-white text-center d-inline">What is<span class="navbar-brand my-5 mx-3">
-				<img class="smile-school-logo" src="./images/smile_off.png" alt="Smile logo">
-				<img class="smile-school-logo" src="./images/logo.png" alt="Smile School logo"></span>?</h1>
-		<h3 class="hero-title display-3 text-white my-4 w-100 text-center font-weight-bold">Go pro!</h3>
-	</div>
-
-	<!-- Buttons -->
+	<!-- Circle check -->
+	<section>
 	<div class="container text-white">
 		<div class="row text-center">
 			<div class="col-4 offset-4">
@@ -70,11 +79,11 @@
 				<p>Unlimited access to all tutorials</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 
@@ -84,11 +93,11 @@
 				<p>Access SmileSchool private forum</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 
@@ -98,87 +107,90 @@
 				<p>Access Smiles contests & Smiles Analysis</p>
 			</div>
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 
 			<div class="col-4 text-center">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height: 1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height: 1.8rem;">
 			</div>
 		</div>
 
 		<!-- Price Table 4 -->
-		<div class="row border-bottom text-white mt-4">
+		<div class="row text-white mt-4">
 			<div class="col-4 ">
 				<p>Get a free toothbrush</p>
 			</div>
 			<div class="col-4 text-center offset-4">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 		</div>
 		<div class="row text-white mt-4">
 			<div class="col-4 ">
-				<img src="./images/signal.png" alt="">
+				<img src="./assets/images/signal.png" alt="">
 			</div>
 			<div class="col-4 text-center offset-4">
-				<img src="./images/check-crcle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
+				<img src="./assets/images/check-circle.png" alt="Check Circle" style="width: 1.8rem; height:1.8rem;">
 			</div>
 			<p>Exclusive discount on all Signal products</p>
 		</div>
 	</div>
+	</section>
 
-	<main>
-		<!-- Carousel of quotes  -->
-		<section class="carousel mt-5" style="background-color: #C271FF">
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="img-fluid float-left rounded-circle circle-thumb my-2 mx-4" src="./images/profile_5.jpg" alt="First slide">
-						<p class="text-white pt-4">“Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.”</p>
-						<h5 class="text-white">Dave Sanders</h5>
-						<em class="text-white">Kickboxer</em>
-						<div class="carousel-caption d-none-d-md-block"></div>
-					</div>
-					<div class="carousel-item">
-						<img class="img-fluid float-left rounded-circle circle-thumb my-2 mx-4" src="./images/profile_3.jpg" alt="Second slide">
-						<p class="text-white pt-4">“The first principle is that you must not fool yourself and you are the easiest person to fool.”</p>
-						<h5 class="text-white">Ken Thompson</h5>
-						<em class="text-white">Accordian player</em>
-					</div>
+	   <!-- Carousel of quotes section -->
+	   <section class="carousel mt-n5 pt-4" style="background-color: #C271FF">
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="img-fluid float-left rounded-circle circle-img2 my-2 mx-4"
+						src="./assets/images/profile_5.jpg" alt="First slide">
+					<p class="text-white pt-4">« Those tutorial aree concise and go straight to the point. I can't
+						think of a better <br>place to learn smiling. And it's so fun! »</p>
+					<h5 class="text-white ">Person Name</h5>
+					<em class="text-white">weather presenter</em>
+					<div class="carousel-caption d-none-d-md-block"></div>
 				</div>
-				<a href="" class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-				</a>
+				<div class="carousel-item">
+					<img class="img-fluid float-left rounded-circle circle-img2 my-2 mx-4"
+						src="./assets/images/profile_5.jpg" alt="First slide">
+					<p class="text-white pt-4">« Those tutorial aree concise and go straight to the point. I can't
+						think of a better <br>place to learn smiling. And it's so fun! »</p>
+					<h5 class="text-white ">Person Name</h5>
+					<em class="text-white">weather presenter</em>
+				</div>
 			</div>
-		</section>
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			</a>
+		</div>
+	</section>
 
 		<!-- FAQ Section -->
 		<section class="container-fluid bg-white">
-				<h2 class="display-3 text-center">F.A.Q.</h2>
-				<div class="row my-md-5">
-					<div class="col-md-6 px-5 py-md-0 pt-5 pb-4">
-						<h6 class="font-weight-bold">How does this work?</h6>
-						<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="col-md-6 px-5 py-md-0 py-4">
-						<h6 class="font-weight-bold">How does this work?</h6>
-						<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
+			<h2 class="display-3 text-center">F.A.Q.</h2>
+			<div class="row my-md-5">
+				<div class="col-md-6 px-5 py-md-0 pt-5 pb-4">
+					<h6 class="font-weight-bold">How does this work?</h6>
+					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
-				<div class="row my-md-5 my-0">
-					<div class="col-md-6 px-5 py-md-0 py-4">
-						<h6 class="font-weight-bold">How does this work?</h6>
-						<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-					<div class="col-md-6 px-5 py-md-0 py-4">
-						<h6 class="font-weight-bold">How does this work?</h6>
-						<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
+				<div class="col-md-6 px-5 py-md-0 py-4">
+					<h6 class="font-weight-bold">How does this work?</h6>
+					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
-		</section>
-	</main>
+			<div class="row my-md-5 my-0">
+				<div class="col-md-6 px-5 py-md-0 py-4">
+					<h6 class="font-weight-bold">How does this work?</h6>
+					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+				<div class="col-md-6 px-5 py-md-0 py-4">
+					<h6 class="font-weight-bold">How does this work?</h6>
+					<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+</main>
 </body>
 
 </html>
